--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
     "react": "^19.1.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.1.1",
     "react-multi-carousel": "^2.8.6",
     "react-redux": "^9.2.0",
