--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1",
     "react-multi-carousel": "^2.8.6",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
